# node-manager-lib

./: .gitignore  CMakeLists.txt
include/nmgr/: interface.h  lib-interface.h  line-iterator.hpp  line.hpp  point.h  requirements.h
lib/: print_to_screen.cc
src/: MemoryManager.cc  MemoryManager.h  MemoryManager.hpp  PowOfTwo.h  collision.h  interface.cc  lib-interface.cc  print_to_screen.cc  singleton.cc  singleton.h
test/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt
tests/alloc_test/: CMakeLists.txt
tests/collision_test/: CMakeLists.txt  main.cc
tests/line_test/: CMakeLists.txt  main.cc
